--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 
 @layer base {
   :root {
-    --background: 6 100% 94%; /* #ffe4e1 */
+    --background: 196 25% 40%; /* #497786 */
     --foreground: 40 30% 20%; /* Dark brown for text on light yellow */
 
     --card: 0 0% 100%; /* White cards for contrast */
