--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 
 @layer base {
   :root {
-    --background: 196 25% 40%; /* #497786 */
+    --background: 339 98% 67%; /* #fd5b9b */
     --foreground: 40 30% 20%; /* Dark brown for text on light yellow */
 
     --card: 0 0% 100%; /* White cards for contrast */
