--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ body {
 @layer base {
   :root {
     --background: 339 98% 67%; /* #fd5b9b */
-    --foreground: 40 30% 20%; /* Dark brown for text on light yellow */
+    --foreground: 238 95% 57%; /* #2d32f8 */
 
     --card: 0 0% 100%; /* White cards for contrast */
     --card-foreground: 40 30% 20%;
